fix body overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -118,4 +118,5 @@
 }
 body {
   font-family: "Product Sans", sans-serif;
+  overflow-x: hidden;
 }
